--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Animation</title>
-    <link rel="icon" type="image/png" href="Assets/ej-spade.ico">
+    <link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -49,3 +49,5 @@
 </body>
 
 </html>
+
+<!-- Emmanuel Jose logo and favicon. © Emmanuel Jose. All Rights Reserved. -->
