--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:title" content="Heart Animation" />
+		<meta property="og:image" content="Assets/meta-012-hearts.png" />
+		<meta
+			property="og:image:alt"
+			content="The words 'love is love' against a background of hearts. Click to visit website."
+		/>
+		<meta property="og:description" content="Project by Emmanuel Jose" />
+		<meta property="og:url" content="https://emjose.github.io/heart-animation/" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary" />
+		<meta
+			name="keywords"
+			content="HTML, CSS, JavaScript, form, animation, star wars, america's next top model, text"
+		/>
+		<meta name="author" content="Emmanuel Jose" />
 		<title>Heart Animation</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
 		<link rel="stylesheet" href="style.css" />
