--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 		<meta property="og:url" content="https://emjose.github.io/heart-animation/" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary" />
-		<meta
-			name="keywords"
-			content="HTML, CSS, JavaScript, form, animation, star wars, america's next top model, text"
-		/>
+		<meta name="keywords" content="HTML, CSS, JavaScript, hearts, animation, Anime.js" />
 		<meta name="author" content="Emmanuel Jose" />
 		<title>Heart Animation</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
