update meta tags

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		<div class="container">
 			<a
 				href="https://github.com/emjose/heart-animation/#header"
+				target="_blank"
+				rel="noopener noreferrer"
 				class="github-corner"
 				aria-label="View source on GitHub"
 				><svg
