--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:title" content="Heart Animation" />
-		<meta property="og:image" content="Assets/meta-012-hearts.png" />
+		<meta property="og:image" content="https://emjose.github.io/heart-animation/Assets/meta-012-hearts.png" />
 		<meta
 			property="og:image:alt"
 			content="The words 'love is love' against a background of hearts. Click to visit website."
@@ -18,6 +18,7 @@
 		<meta name="author" content="Emmanuel Jose" />
 		<title>Heart Animation</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
+		<link rel="canonical" href="https://emjose.github.io/heart-animation/" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
