--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 		<meta property="og:url" content="https://emjose.github.io/heart-animation/" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary" />
+		<meta name="description" content="An animated background of hearts. Click to visit website." />
+		<meta name="theme-color" content="#e80202" />
 		<meta name="keywords" content="HTML, CSS, JavaScript, hearts, animation, Anime.js" />
 		<meta name="author" content="Emmanuel Jose" />
 		<title>Heart Animation</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png" />
+		<link rel="manifest" href="manifest.webmanifest" />
 		<link rel="canonical" href="https://emjose.github.io/heart-animation/" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
